--- a/lab4/ansible.cfg
+++ b/lab4/ansible.cfg
@@ -1,2 +1,3 @@
 [defaults]
-vault_password_file = /home/ubuntu/Documents/ansible/.vault_pass.txt
+vault_password_file=/home/ubuntu/Documents/ansible/.vault_pass.txt
+inventory      = ./inventory
