--- a/lab4/host_vars/192.168.56.104.yml
+++ b/lab4/host_vars/192.168.56.104.yml
@@ -4,21 +4,19 @@ interfaces:
   lo1:
     loopback: 1
     descr: lo1
-    ip: 1.1.1.1
-    net: 1.1.1.1
-    mask: 255.255.255.255
+    ip: 10.21.0.1
+    net: 192.168.53.0
+    mask: 255.255.255.0
     ospf_area: 1
-    wildcard: 0.0.0.0
+    wildcard: 0.0.0.255
   lo2:
     loopback: 2
     descr: lo2
-    ip: 2.2.2.2
-    net: 2.2.2.2
-    mask: 255.255.255.255
-  lo3:
-    loopback: 3
-    ip: 3.3.3.3
-    mask: 255.255.255.255
+    ip: 10.22.0.1
+    net: 192.168.54.0
+    mask: 255.255.255.0
+    ospf_area: 2    
+    wildcard: 0.0.0.255    
   GigabitEthernet0/0:
     ip: 192.168.56.104
     net: 192.168.56.0
@@ -28,7 +26,7 @@ interfaces:
   GigabitEthernet1/0:
     auth: true
     ip: 4.4.4.5
-    net: 4.4.4.0
+    net: 192.168.57.0
     mask: 255.255.255.0
     ospf_area: 1
     wildcard: 0.0.0.255
