--- a/lab4/lab04.yml
+++ b/lab4/lab04.yml
@@ -19,25 +19,39 @@
       cisco.ios.ios_config:
         src: "./templates/ospf_auth.j2"
 
-    # print config (for personal use and debugging)
-    - name: config
-      ios_command:
-        commands:
-          - show run | exclude !
-      register: result_config
-
-    - name: Print config
-      debug:
-        var: result_config
-
     # print osfp info
-    - name: config
+    - name: ospf neighbor
       ios_command:
         commands:
           - show ip ospf neighbor
-          - show ip route ospf
-      register: ospf_config
+      register: ospf_neighbor
 
-    - name: Print ospf config
-      debug:
-        var: ospf_config.stdout_lines
+    - name: ospf routes
+      ios_command:
+        commands:
+          - show ip route ospf
+      register: ospf_route
+
+    
+    - name: "vars"
+      set_fact:
+        osp_neighbor_parsed: "{{ospf_neighbor.stdout[0] | regex_findall('[\\n]{1}(?:[0-9]{1,3}\\.){3}[0-9]{1,3}')}}"
+    
+    - debug:
+        msg: "Neighbour IDs: {{ item.replace('\\n', '').replace('\n', '') }}"
+      loop: "{{ osp_neighbor_parsed }}"
+
+    - debug:
+        msg: "Number of learned routes: {{ospf_route.stdout[0] | regex_findall('(?:[0-9]{1,3}\\.){3}[0-9]{1,3}[,]') | count}}"
+
+# print config 
+#
+#    - name: config
+#      ios_command:
+#       commands:
+#          - show run | exclude !
+#      register: result_config
+#
+#    - name: Print config
+#      debug:
+#        var: result_config
